# va-prestashop

./: compose.yaml  pyproject.toml
src/: app.py  frontend.py
src/config/: graph_config.yaml  project_config.py
src/conversation/: conversation.py
src/graph/: create_graph.py  invoke_graph.py
src/llms/: base_llm.py  core.py
src/llms/cart_manager/: core.py  prompt.py
src/llms/core/: core.py  prompt.py
src/llms/writer/: core.py  prompt.py
src/prestashop/: dockerfile  restore_cart.php  utils.py
src/storage/: __init__.py  database.py  redis_db.py
